# scrimshaw

./: .clang-format  .gitignore  .kateconfig  CMakeLists.txt  autorun.sh  build.sh  clang-format-run.sh  clockrun.sh  readme.md
display/: Makefile  display.cpp  display.h  epdif_display.cpp  epdif_display.h  epdif_driver.cpp  epdif_driver.h  gtk_display.cpp  gtk_display.h  pixel_buffer.cpp  pixel_buffer.h  test.cpp  vec2.h  wl_shm_format.h
display/epdif/: epd1in54.cpp  epd1in54.h  epdif.cpp  epdif.h  epdif_display.cpp  epdif_display.h  epdif_driver.cpp  epdif_driver.h  readme.md
display/gtk/: gtk_display.cpp  gtk_display.h
doc/: config.txt  packages.md  setup.md
emulator/: wiring_pi.cpp  wiring_pi.h
gpio/: gpio.h  unique_gpio.cpp  unique_gpip.h  wiring_pi_gpio.cpp
hedgehog/: util.cpp  util.h
hedgehog/backend/: Backend.cpp  Backend.h  BackendScrimshaw.cpp  Texture.cpp  Texture.h  libinput.cpp  literalKeymap.h
hedgehog/main/: main.cpp
hedgehog/scene/: InputInterface.h  Scene.cpp  Scene.h  WindowInterface.h
hedgehog/wayland/: Resource.cpp  Resource.h  WaylandServer.cpp  WaylandServer.h  WlArray.h  WlDataDeviceManager.cpp  WlDataDeviceManager.h  WlRegion.cpp  WlRegion.h  WlSeat.cpp  WlSeat.h  WlShellSurface.cpp  WlShellSurface.h  WlSurface.cpp  WlSurface.h  XdgShellV6Surface.cpp  XdgShellV6Surface.h
hedgehog/wayland/protocols/: .clang-format  gen_headers.py  wayland.c  xdg-shell-unstable-v5.c  xdg-shell-unstable-v5.h  xdg-shell-unstable-v6.c  xdg-shell-unstable-v6.h
main/: .hedgehog_main.cpp.kate-swp  display_test_main.cpp  hedgehog_main.cpp
scripts/: morse_gpio_input.py
util/: executor.cpp  executor.h  logger.cpp  logger.h  std.h  time.cpp  time.h  vec2.h
